--- a/result/drn_d_105_max/config.yaml
+++ b/result/drn_d_105_max/config.yaml
@@ -2,6 +2,7 @@ model: drn_d_105_max
 
 class_weight_flag: False # if you use class weight to calculate cross entropy or not
 writer_flag: True # if you use tensorboardx or not
+MSC: True
 
 obj_classes: 17
 aff_classes: 7
@@ -11,7 +12,7 @@ height: 256
 width: 256
 batch_size: 8
 num_workers: 4
-max_epoch: 100
+max_epoch: 50
 learning_rate: 0.0001
 poly_power: 0.9
 
