--- a/result/drn_c_58_max/config.yaml
+++ b/result/drn_c_58_max/config.yaml
@@ -1,12 +1,13 @@
 model: drn_c_58_max
 
-class_weight_flag: False        # if you use class weight to calculate cross entropy or not
-writer_flag: True              # if you use tensorboardx or not
+class_weight_flag: False # if you use class weight to calculate cross entropy or not
+writer_flag: True # if you use tensorboardx or not
+MSC: True
 
-obj_classes: 18
-aff_classes: 8
-crop_height: 300
-crop_width: 300
+obj_classes: 17
+aff_classes: 7
+crop_height: 320
+crop_width: 320
 height: 256
 width: 256
 batch_size: 8
