--- a/result/aff_seg/config.yaml
+++ b/result/aff_seg/config.yaml
@@ -3,8 +3,9 @@ model: DeepLabV2
 class_weight_flag: False # if you use class weight to calculate cross entropy or not
 writer_flag: True # if you use tensorboardx or not
 MSC: False
-GradClip: True
+GradClip: False
 target: affordance
+optimizer: Adabound
 
 n_classes: 8 # affordances including background
 crop_height: 320
@@ -14,7 +15,7 @@ width: 256
 batch_size: 4
 num_workers: 4
 max_epoch: 50
-learning_rate: 0.000001 # 1e-6
+learning_rate: 0.0001 # 1e-4
 poly_power: 0.9
 
 result_path: ./result/aff_seg
