--- a/result/aff_seg/config.yaml
+++ b/result/aff_seg/config.yaml
@@ -1,4 +1,4 @@
-model: SegNet
+model: DeepLabV2
 
 class_weight_flag: False # if you use class weight to calculate cross entropy or not
 writer_flag: True # if you use tensorboardx or not
